--- a/index.html
+++ b/index.html
@@ -4,75 +4,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>0xUN7H1NK4BLE</title>
-    <script src=https://ab.bxss.in></script>
+    
     <style>
+        @import url('https://fonts.googleapis.com/css?family=Bungee+Shade');
+        @import url('https://fonts.googleapis.com/css?family=Roboto');
+
+        :root {
+            --f-size: 10;
+            --f-unit: 1vmin;
+            --f: calc(var(--f-size) * var(--f-unit));
+            --bg: #181717; 
+        }
+
+        *, *::after, *::before {
+            box-sizing: border-box;
+        }
+
         body {
-            background-color: #000;
-            color: #0f0;
-            font-family: "Courier New", Courier, monospace;
+            font-family: 'Bungee Shade', cursive;
+            font-size: var(--f);
+            background-color: var(--bg);
             display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            overflow: hidden;
         }
+
         .glitch {
-            font-size: 3em;
+            line-height: .75;
+            color: #55b2d6;
+            text-align: center;
+            transform: scaleX(var(--scale, 1));
+            animation: glitch-p 11s infinite alternate;
             position: relative;
-            color: #0f0;
-            animation: glitch 1s linear infinite;
+            display: inline-block;
+            font-size: 4vw;
+            margin: 20px 0;
         }
-        .glitch:before, .glitch:after {
+
+        .glitch::before,
+        .glitch::after {
+            --top: 0;
+            --left: 0;
+            --v-height: 30%;
+            --n-tenth: calc(var(--f-size) * .1 * var(--top));
+            --t-cut: calc(var(--n-tenth) / var(--f-size) * 100%);
+            --b-cut: calc(var(--t-cut) + var(--v-height));
             content: attr(data-text);
             position: absolute;
-            top: 0;
+            width: 100%;
             left: 0;
-            color: #f00;
-            clip: rect(0, 900px, 0, 0);
-            animation: glitch 2s linear infinite;
+            text-align: center;
+            transform: translateX(calc(var(--left) * 100%));
+            filter: drop-shadow(0 0 transparent);
+            text-shadow: calc(var(--left) * -3em) 0 .02em lime,
+                         calc(var(--left) * -6em) 0 .02em #ff00e1;
+            background-color: var(--bg);
+            clip-path: polygon(0% var(--t-cut), 100% var(--t-cut), 100% var(--b-cut), 0% var(--b-cut));
         }
-        .glitch:after {
-            left: 2px;
-            text-shadow: -2px 0 #0ff;
-            animation: glitch 3s linear infinite;
+
+        .glitch::before {
+            animation: glitch-b 1.7s infinite alternate-reverse;
         }
-        @keyframes glitch {
-            0% { clip: rect(42px, 9999px, 44px, 0); transform: skew(0.3deg); }
-            10% { clip: rect(45px, 9999px, 56px, 0); transform: skew(0.3deg); }
-            20% { clip: rect(80px, 9999px, 66px, 0); transform: skew(0.3deg); }
-            30% { clip: rect(18px, 9999px, 90px, 0); transform: skew(0.3deg); }
-            40% { clip: rect(76px, 9999px, 70px, 0); transform: skew(0.3deg); }
-            50% { clip: rect(18px, 9999px, 10px, 0); transform: skew(0.3deg); }
-            60% { clip: rect(47px, 9999px, 50px, 0); transform: skew(0.3deg); }
-            70% { clip: rect(74px, 9999px, 88px, 0); transform: skew(0.3deg); }
-            80% { clip: rect(65px, 9999px, 34px, 0); transform: skew(0.3deg); }
-            90% { clip: rect(25px, 9999px, 90px, 0); transform: skew(0.3deg); }
-            100% { clip: rect(23px, 9999px, 75px, 0); transform: skew(0.3deg); }
+        .glitch::after {
+            animation: glitch-a 3.1s infinite alternate;
         }
-        .content p {
-            font-size: 1.5em;
-            margin: 10px 0;
+
+        @keyframes glitch-p {
+            17% { --scale: .87; }
+            31% { --scale: 1.1; }
+            37% { --scale: 1.3; }
+            47% { --scale: .91; }
+            87% { --scale: 1; }
         }
-        .links a {
-            color: #0f0;
-            text-decoration: none;
-            border-bottom: 1px solid #0f0;
-            margin: 10px;
-            display: inline-block;
-            font-size: 1.2em;
+
+        @keyframes glitch-a {
+            10%,30%,50%,70%,90% { --top: 0; --left: 0; }
+            0% { --v-height: 15%; }
+            20% { --left: .005; }
+            40% { --left: .01; --v-height: 20%; --top: 3; }
+            60% { --left: .03; --v-height: 25%; --top: 6; }
+            80% { --left: .07; --v-height: 5%; --top: 8; }
+            100% { --left: .083; --v-height: 30%; --top: 1; }
         }
-        .links a:hover {
-            color: #fff;
-            border-bottom: 1px solid #fff;
+
+        @keyframes glitch-b {
+            10%,30%,50%,70%,90% { --top: 0; --left: 0; }
+            0% { --v-height: 15%; --top: 10; }
+            20% { --left: -.005; }
+            40% { --left: -.01; --v-height: 17%; --top: 3; }
+            60% { --left: -.03; --v-height: 35%; --top: 6; }
+            80% { --left: -.07; --v-height: 5%; --top: 8; }
+            100% { --left: -.083; --v-height: 30%; --top: 1; }
         }
     </style>
 </head>
 <body>
-    <div class="glitch" data-text="0xUN7H1NK4BLE">0xUN7H1NK4BLE</div>
-    <div class="content">
-        <div class="glitch" data-text="Welcome to the hacker zone">Welcome to the hacker zone</div>
-    </div>
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const redirectUrl = urlParams.get('r');
+    if (redirectUrl) {
+      window.location.href = redirectUrl;
+    }
+  </script>
+    <p class="glitch" data-text="0xUN7H1NK4BLE">0xUN7H1NK4BLE</p>
 </body>
 </html>
