--- a/iframe.html
+++ b/iframe.html
@@ -7,17 +7,19 @@
 </head>
 <body>
     <h1>Embedded Pages</h1>
-    <iframe src="http://172.0.0.1:80" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:443" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:8080" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:8443" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:21" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:22" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:25" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:110" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:143" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:3306" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:5000" width="100%" height="500px"></iframe>
-    <iframe src="http://172.0.0.1:5500" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:80" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:443" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:8080" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:8443" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:21" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:22" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:25" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:110" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:143" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:3306" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:5000" width="100%" height="500px"></iframe>
+    <iframe src="http://0.0.0.0:5500" width="100%" height="500px"></iframe>
+    <iframe src="http://169.254.169.254/metadata" width="100%" height="500px"></iframe>
+    <iframe src="http://169.254.169.254" width="100%" height="500px"></iframe>
 </body>
 </html>
