--- a/index.html
+++ b/index.html
@@ -4,112 +4,240 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>0xUN7H1NK4BLE</title>
-    
     <style>
         @import url('https://fonts.googleapis.com/css?family=Bungee+Shade');
-        @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-        :root {
-            --f-size: 10;
-            --f-unit: 1vmin;
-            --f: calc(var(--f-size) * var(--f-unit));
-            --bg: #181717; 
-        }
+:root {
+    --f-size: 8;
+    --f-unit: 0.6vmin;
+    --bg: #181717;
+    --tab-bg: #333;
+    --tab-color: #00bcd4;
+    --tab-hover-bg: #555;
+    --tab-active-bg: #00bcd4;
+    --tab-active-color: #000;
+}
 
-        *, *::after, *::before {
-            box-sizing: border-box;
-        }
+body {
+    font-family: 'Bungee Shade', cursive;
+    font-size: var(--f-size)em;
+    background-color: var(--bg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 0;
+    overflow: hidden;
+}
 
-        body {
-            font-family: 'Bungee Shade', cursive;
-            font-size: var(--f);
-            background-color: var(--bg);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            margin: 0;
-            overflow: hidden;
-        }
+.glitch {
+    line-height: .75;
+    color: #55b2d6;
+    text-align: center;
+    transform: scaleX(var(--scale, 1));
+    animation: glitch-p 11s infinite alternate;
+    position: relative;
+    display: inline-block;
+    font-size: 3vw;
+    z-index: 1; /* Ensure it's above other content */
+}
 
-        .glitch {
-            line-height: .75;
-            color: #55b2d6;
-            text-align: center;
-            transform: scaleX(var(--scale, 1));
-            animation: glitch-p 11s infinite alternate;
-            position: relative;
-            display: inline-block;
-            font-size: 4vw;
-            margin: 20px 0;
-        }
+.glitch::before,
+.glitch::after {
+    --top: 0;
+    --left: 0;
+    --v-height: 30%;
+    --n-tenth: calc(var(--f-size) * .1 * var(--top));
+    --t-cut: calc(var(--n-tenth) / var(--f-size) * 100%);
+    --b-cut: calc(var(--t-cut) + var(--v-height));
+    content: attr(data-text);
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    transform: translateX(calc(var(--left) * 100%));
+    filter: drop-shadow(0 0 transparent);
+    text-shadow: calc(var(--left) * -3em) 0 .02em lime,
+                 calc(var(--left) * -6em) 0 .02em #ff00e1;
+    background-color: var(--bg);
+    clip-path: polygon(0% var(--t-cut), 100% var(--t-cut), 100% var(--b-cut), 0% var(--b-cut));
+    z-index: -1; /* Ensure it does not overlap the container */
+}
 
-        .glitch::before,
-        .glitch::after {
-            --top: 0;
-            --left: 0;
-            --v-height: 30%;
-            --n-tenth: calc(var(--f-size) * .1 * var(--top));
-            --t-cut: calc(var(--n-tenth) / var(--f-size) * 100%);
-            --b-cut: calc(var(--t-cut) + var(--v-height));
-            content: attr(data-text);
-            position: absolute;
-            width: 100%;
-            left: 0;
-            text-align: center;
-            transform: translateX(calc(var(--left) * 100%));
-            filter: drop-shadow(0 0 transparent);
-            text-shadow: calc(var(--left) * -3em) 0 .02em lime,
-                         calc(var(--left) * -6em) 0 .02em #ff00e1;
-            background-color: var(--bg);
-            clip-path: polygon(0% var(--t-cut), 100% var(--t-cut), 100% var(--b-cut), 0% var(--b-cut));
-        }
+.glitch::before {
+    animation: glitch-b 1.7s infinite alternate-reverse;
+}
+.glitch::after {
+    animation: glitch-a 3.1s infinite alternate;
+}
 
-        .glitch::before {
-            animation: glitch-b 1.7s infinite alternate-reverse;
-        }
-        .glitch::after {
-            animation: glitch-a 3.1s infinite alternate;
-        }
+@keyframes glitch-p {
+    17% { --scale: .87; }
+    31% { --scale: 1.1; }
+    37% { --scale: 1.3; }
+    47% { --scale: .91; }
+    87% { --scale: 1; }
+}
 
-        @keyframes glitch-p {
-            17% { --scale: .87; }
-            31% { --scale: 1.1; }
-            37% { --scale: 1.3; }
-            47% { --scale: .91; }
-            87% { --scale: 1; }
-        }
+@keyframes glitch-a {
+    10%,30%,50%,70%,90% { --top: 0; --left: 0; }
+    0% { --v-height: 15%; }
+    20% { --left: .005; }
+    40% { --left: .01; --v-height: 20%; --top: 3; }
+    60% { --left: .03; --v-height: 25%; --top: 6; }
+    80% { --left: .07; --v-height: 5%; --top: 8; }
+    100% { --left: .083; --v-height: 30%; --top: 1; }
+}
 
-        @keyframes glitch-a {
-            10%,30%,50%,70%,90% { --top: 0; --left: 0; }
-            0% { --v-height: 15%; }
-            20% { --left: .005; }
-            40% { --left: .01; --v-height: 20%; --top: 3; }
-            60% { --left: .03; --v-height: 25%; --top: 6; }
-            80% { --left: .07; --v-height: 5%; --top: 8; }
-            100% { --left: .083; --v-height: 30%; --top: 1; }
-        }
+@keyframes glitch-b {
+    10%,30%,50%,70%,90% { --top: 0; --left: 0; }
+    0% { --v-height: 15%; --top: 10; }
+    20% { --left: -.005; }
+    40% { --left: -.01; --v-height: 17%; --top: 3; }
+    60% { --left: -.03; --v-height: 35%; --top: 6; }
+    80% { --left: -.07; --v-height: 5%; --top: 8; }
+    100% { --left: -.083; --v-height: 30%; --top: 1; }
+}
 
-        @keyframes glitch-b {
-            10%,30%,50%,70%,90% { --top: 0; --left: 0; }
-            0% { --v-height: 15%; --top: 10; }
-            20% { --left: -.005; }
-            40% { --left: -.01; --v-height: 17%; --top: 3; }
-            60% { --left: -.03; --v-height: 35%; --top: 6; }
-            80% { --left: -.07; --v-height: 5%; --top: 8; }
-            100% { --left: -.083; --v-height: 30%; --top: 1; }
-        }
+.container {
+    width: 60%;
+    max-width: 600px;
+    background-color: #282828;
+    border: 1px solid #00bcd4;
+    padding: 20px;
+    border-radius: 8px;
+    margin-top: 20px; /* Added margin-top to separate from glitch text */
+    position: relative;
+    z-index: 0; /* Ensure it is below the glitch effect */
+}
+
+.tabs {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.tabs input[type="radio"] {
+    display: none;
+}
+
+.tabs label {
+    flex: 1;
+    text-align: center;
+    padding: 12px;
+    cursor: pointer;
+    background-color: var(--tab-bg);
+    color: var(--tab-color);
+    border: 2px solid transparent;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.tabs label:hover {
+    background-color: var(--tab-hover-bg);
+}
+
+.tabs input[type="radio"]:checked + label {
+    background-color: var(--tab-active-bg);
+    color: var(--tab-active-color);
+    border-color: var(--tab-active-bg);
+    font-weight: bold;
+}
+
+textarea {
+    width: 100%;
+    height: 100px;
+    background-color: #1c1c1c;
+    color: #fff;
+    border: 1px solid #34c0d3;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-family: monospace;
+}
+
+
     </style>
 </head>
 <body>
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
+    <script>
+        const urlParams = new URLSearchParams(window.location.search);
     const redirectUrl = urlParams.get('r');
     if (redirectUrl) {
       window.location.href = redirectUrl;
     }
-  </script>
-    <p class="glitch" data-text="0xUN7H1NK4BLE">0xUN7H1NK4BLE</p>
+      </script>
+        <p class="glitch" data-text="welcome to 0xUN7H1NK4BLE world">welcome to 0xUN7H1NK4BLE world</p>
+
+    <div class="container">
+        <div class="tabs">
+            <input type="radio" id="tab1" name="tab" checked>
+            <label for="tab1" >URL Encode</label>
+            <input type="radio" id="tab2" name="tab">
+            <label for="tab2">String.fromCharCode</label>
+            <input type="radio" id="tab3" name="tab">
+            <label for="tab3">Base64 URLSafe</label>
+            <input type="radio" id="tab4" name="tab">
+            <label for="tab4">HTML Encode</label>
+        </div>
+
+        <textarea id="input" placeholder="Enter text..."></textarea>
+        <textarea id="output" placeholder="Encoded output..." readonly></textarea>
+    </div>
+
+    <script>
+        const input = document.getElementById('input');
+        const output = document.getElementById('output');
+
+        function updateOutput() {
+            switch (document.querySelector('input[name="tab"]:checked').id) {
+                case 'tab1':
+                    output.value = encodeURIComponent(input.value);
+                    break;
+                case 'tab2':
+                    output.value = `String.fromCharCode(${Array.from(input.value).map(c => c.charCodeAt(0)).join(',')})`;
+                    break;
+                case 'tab3':
+                    output.value = btoa(input.value).replace(/=/g, '').replace(/\+/g, '-').replace(/\//g, '_');
+                    break;
+                case 'tab4':
+                    output.value = input.value
+                        .replace(/&/g, '&amp;')
+                        .replace(/</g, '&lt;')
+                        .replace(/>/g, '&gt;')
+                        .replace(/"/g, '&quot;')
+                        .replace(/'/g, '&#39;');
+                    break;
+            }
+        }
+
+        document.querySelectorAll('.tabs input[type="radio"]').forEach(radio => {
+            radio.addEventListener('change', function() {
+                switch (this.id) {
+                    case 'tab1':
+                        input.placeholder = 'Enter text for URL encoding...';
+                        break;
+                    case 'tab2':
+                        input.placeholder = 'Enter text for String.fromCharCode encoding...';
+                        break;
+                    case 'tab3':
+                        input.placeholder = 'Enter text for Base64 URLSafe encoding...';
+                        break;
+                    case 'tab4':
+                        input.placeholder = 'Enter text for HTML encoding...';
+                        break;
+                }
+                updateOutput();
+            });
+        });
+
+        input.addEventListener('input', updateOutput);
+
+        // Initialize with default tab content
+        updateOutput();
+    </script>
 </body>
 </html>
