--- a/threatnix.html
+++ b/threatnix.html
@@ -28,6 +28,24 @@
             --blockquote-bg: #f8fafc;
         }
 
+        /* Dark mode variables */
+        [data-theme="dark"] {
+            --primary: #60a5fa;
+            --critical: #f87171;
+            --high: #fb7185;
+            --medium: #fbbf24;
+            --low: #22d3ee;
+            --info: #94a3b8;
+            --bg: #0f172a;
+            --card: #1e293b;
+            --text: #f1f5f9;
+            --text-light: #cbd5e1;
+            --border: #334155;
+            --shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            --code-bg: #1e293b;
+            --blockquote-bg: #334155;
+        }
+
         * {
             box-sizing: border-box;
             margin: 0;
@@ -51,6 +69,9 @@
             padding: 1.25rem 1.5rem;
             border-bottom: 1px solid var(--border);
             box-shadow: var(--shadow);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         h1 {
@@ -549,11 +570,43 @@
                 font-size: 0.85rem;
             }
         }
+
+        .theme-toggle {
+            background: none;
+            border: 1px solid var(--border);
+            color: var(--text);
+            padding: 0.5rem;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .theme-toggle:hover {
+            background-color: var(--bg);
+            transform: scale(1.05);
+        }
+
+        .theme-toggle:focus {
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(58, 134, 255, 0.3);
+        }
+
+        [data-theme="dark"] .theme-toggle {
+            border-color: var(--border);
+        }
     </style>
 </head>
 <body>
     <header>
         <h1><i class="fas fa-shield-alt"></i> Report Viewer</h1>
+        <button id="themeToggle" class="theme-toggle" title="Toggle dark mode">
+            <i class="fas fa-moon"></i>
+        </button>
     </header>
 
     <div class="input-container">
@@ -628,6 +681,43 @@
         let filteredReports = [];
         let statusOptions = new Set();
         let dateFields = ['Published Date', 'Date', 'Created', 'Submitted', 'Reported'];
+
+        // Theme management
+        let currentTheme = localStorage.getItem('theme') || 'light';
+        
+        // Initialize theme
+        function initializeTheme() {
+            document.documentElement.setAttribute('data-theme', currentTheme);
+            updateThemeIcon();
+        }
+
+        // Toggle theme
+        function toggleTheme() {
+            currentTheme = currentTheme === 'light' ? 'dark' : 'light';
+            document.documentElement.setAttribute('data-theme', currentTheme);
+            localStorage.setItem('theme', currentTheme);
+            updateThemeIcon();
+        }
+
+        // Update theme icon
+        function updateThemeIcon() {
+            const themeToggle = document.getElementById('themeToggle');
+            const icon = themeToggle.querySelector('i');
+            
+            if (currentTheme === 'dark') {
+                icon.className = 'fas fa-sun';
+                themeToggle.title = 'Switch to light mode';
+            } else {
+                icon.className = 'fas fa-moon';
+                themeToggle.title = 'Switch to dark mode';
+            }
+        }
+
+        // Initialize theme on page load
+        initializeTheme();
+
+        // Add event listener for theme toggle
+        document.getElementById('themeToggle').addEventListener('click', toggleTheme);
 
         // Configure marked for better markdown rendering
         marked.setOptions({
