--- a/threatnix.html
+++ b/threatnix.html
@@ -599,6 +599,29 @@
         [data-theme="dark"] .theme-toggle {
             border-color: var(--border);
         }
+
+        [data-theme="dark"] .report-content .report-body a {
+            color: #7dd3fc;
+            text-decoration: underline;
+        }
+        [data-theme="dark"] input,
+        [data-theme="dark"] .search-container input,
+        [data-theme="dark"] .program-search-container input {
+            background-color: #1e293b;
+            color: #f1f5f9;
+            border: 1px solid #334155;
+        }
+        [data-theme="dark"] input::placeholder,
+        [data-theme="dark"] .search-container input::placeholder,
+        [data-theme="dark"] .program-search-container input::placeholder {
+            color: #94a3b8;
+            opacity: 1;
+        }
+
+        [data-theme="dark"] .report-content .report-body code {
+            color: #f1f5f9;
+            background-color: #1e293b;
+        }
     </style>
 </head>
 <body>
@@ -727,6 +750,12 @@
 
         // Add event listener for load button
         document.getElementById('loadButton').addEventListener('click', loadCSV);
+        // Add event listener for Enter key on URL input
+        document.getElementById('csvUrl').addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                loadCSV();
+            }
+        });
 
         function loadCSV() {
             const urlInput = document.getElementById('csvUrl').value;
