--- a/threatnix.html
+++ b/threatnix.html
@@ -97,22 +97,24 @@
 
         .input-container {
             background-color: var(--card);
-            padding: 1.25rem;
-            margin: 0 1.5rem 1.5rem;
+            padding: 0.5rem 1rem;
+            margin: 0 1.5rem 0.5rem;
             border-radius: var(--border-radius);
             box-shadow: var(--shadow);
             display: flex;
-            gap: 1rem;
+            gap: 0.5rem;
             align-items: center;
+            font-size: 0.97rem;
         }
 
         input {
             flex: 1;
-            padding: 0.75rem 1rem;
+            padding: 0.5rem 0.75rem;
             border: 1px solid var(--border);
             border-radius: var(--border-radius);
             font-size: 0.95rem;
             transition: border-color 0.2s, box-shadow 0.2s;
+            height: 2.1rem;
         }
 
         input:focus {
@@ -122,7 +124,7 @@
         }
 
         button {
-            padding: 0.75rem 1.5rem;
+            padding: 0.5rem 1.1rem;
             background-color: var(--primary);
             color: white;
             border: none;
@@ -134,6 +136,7 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
+            height: 2.1rem;
         }
 
         button:hover {
@@ -144,6 +147,18 @@
         button:focus {
             outline: none;
             box-shadow: 0 0 0 3px rgba(58, 134, 255, 0.3);
+        }
+
+        @media (max-width: 600px) {
+            .input-container {
+                flex-direction: column;
+                gap: 0.5rem;
+                padding: 0.5rem 0.5rem;
+            }
+            input, button {
+                width: 100%;
+                min-width: 0;
+            }
         }
 
         .list-container {
@@ -730,6 +745,28 @@
                 min-width: 100%;
             }
         }
+
+        .resizer {
+            width: 7px;
+            background: linear-gradient(to right, var(--border) 40%, var(--primary) 60%);
+            cursor: col-resize;
+            margin: 0 0.25rem;
+            border-radius: 6px;
+            transition: background 0.2s;
+            position: relative;
+            z-index: 10;
+        }
+        .resizer:hover, .resizer.active {
+            background: linear-gradient(to right, var(--primary) 30%, var(--primary) 70%);
+        }
+        @media (max-width: 900px) {
+            .container {
+                flex-direction: column;
+            }
+            .resizer {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
@@ -800,7 +837,7 @@
                 </div>
             </div>
         </div>
-        
+       <div class="resizer" id="resizer"></div>
         <div class="report-container">
             <div class="report-content" id="reportContent">
                 <div class="empty-state">
@@ -1465,6 +1502,39 @@
         });
         setDropdownHandlers('severity');
         setDropdownHandlers('status');
+
+        // Draggable resizer logic
+        const resizer = document.getElementById('resizer');
+        const leftPanel = document.querySelector('.list-container');
+        const rightPanel = document.querySelector('.report-container');
+        let isResizing = false;
+        let startX = 0;
+        let startLeftWidth = 0;
+        resizer.addEventListener('mousedown', function(e) {
+            isResizing = true;
+            startX = e.clientX;
+            startLeftWidth = leftPanel.offsetWidth;
+            resizer.classList.add('active');
+            document.body.style.cursor = 'col-resize';
+        });
+        document.addEventListener('mousemove', function(e) {
+            if (!isResizing) return;
+            const dx = e.clientX - startX;
+            let newLeftWidth = startLeftWidth + dx;
+            const minLeft = 220;
+            const maxLeft = Math.max(320, window.innerWidth - 320);
+            newLeftWidth = Math.max(minLeft, Math.min(maxLeft, newLeftWidth));
+            leftPanel.style.flex = 'none';
+            leftPanel.style.width = newLeftWidth + 'px';
+            rightPanel.style.flex = '1 1 0%';
+        });
+        document.addEventListener('mouseup', function() {
+            if (isResizing) {
+                isResizing = false;
+                resizer.classList.remove('active');
+                document.body.style.cursor = '';
+            }
+        });
     </script>
 </body>
 </html>
