--- a/threatnix.html
+++ b/threatnix.html
@@ -853,20 +853,64 @@
                 font-size: 11px;
             }
         }
+
+        .input-header-row {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.5rem 1rem 0.5rem 1rem;
+            background: var(--card);
+            border-radius: 10px;
+            border: 1px solid var(--border);
+            box-shadow: 0 1px 4px rgba(31,42,68,0.06);
+            margin: 0.75rem 0.75rem 0.5rem 0.75rem;
+            min-height: unset;
+        }
+        @media (max-width: 768px) {
+            .input-header-row {
+                flex-direction: column;
+                gap: 0.5rem;
+                padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+                margin: 0.5rem;
+            }
+            .input-header-row .input-container, .input-header-row .theme-toggle {
+                width: 100%;
+                margin-left: 0 !important;
+            }
+        }
+        .input-header-row .input-container input {
+            font-size: 0.95rem;
+            padding: 0.5rem 0.75rem;
+            border-radius: 6px;
+            border: 1px solid var(--border);
+            background: var(--bg);
+            min-width: 0;
+        }
+        .input-header-row .input-container button {
+            font-size: 0.95rem;
+            padding: 0.5rem 1rem;
+            border-radius: 6px;
+        }
+        .input-header-row .theme-toggle {
+            width: 36px;
+            height: 36px;
+            min-width: 36px;
+            min-height: 36px;
+            font-size: 1.1rem;
+            margin-left: 0.5rem;
+        }
     </style>
 </head>
 <body>
-    <header>
-        <h1><i class="fas fa-shield-alt"></i> Report Viewer</h1>
-        <button id="themeToggle" class="theme-toggle" title="Toggle dark mode">
+    <div class="input-header-row">
+        <div class="input-container" style="margin: 0; flex: 1;">
+            <input type="text" id="csvUrl" placeholder="Google Sheets URL" 
+                   value="https://docs.google.com/spreadsheets/d/{YOUR_SHEET_ID}/edit#gid=0">
+            <button id="loadButton"><i class="fas fa-download"></i> Load</button>
+        </div>
+        <button id="themeToggle" class="theme-toggle" title="Toggle dark mode" style="margin-left: 1rem;">
             <i class="fas fa-moon"></i>
         </button>
-    </header>
-
-    <div class="input-container">
-        <input type="text" id="csvUrl" placeholder="Google Sheets URL" 
-               value="https://docs.google.com/spreadsheets/d/{YOUR_SHEET_ID}/edit#gid=0">
-        <button id="loadButton"><i class="fas fa-download"></i> Load</button>
     </div>
     
     <div id="error" class="error" style="display: none;">
